<resources>
    <string name="app_name">Frozen</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="user">User</string>
    <string name="default_text">-</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="tag_line">Panduan Belajar HTML dan CSS Dasar</string>
    <string name="search">Search</string>
    <string name="your_materials">Your Materials</string>
    <string name="please_field_your_email">Please field your email</string>
    <string name="please_use_valid_email">Please use valid email</string>
    <string name="please_field_your_password">Please field your password</string>
    <string name="please_wait">Please wait ....</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="please_field_your_name">Please field your name</string>
    <string name="please_field_your_confirm_password">Please field your confirm password</string>
    <string name="please_field_your_password_more_than_8">Please field your password more than 8</string>
    <string name="please_field_your_confirm_password_more_than_8">Please field your confirm password more than 8</string>
    <string name="your_password_didnt_match">Your password did\'nt match</string>
    <string name="please_field_your_old_password">Please field your old password</string>
    <string name="please_input_your_old_password_more_than_8">Please input your old password more than 8</string>
    <string name="please_field_your_new_password">Please field your new password</string>
    <string name="please_input_your_new_password_more_than_8">Please input your new password more than 8</string>
    <string name="please_field_your_confirm_new_password">Please field your confirm new password</string>
    <string name="please_input_your_confirm_new_password_more_than_8">Please input your confirm new password more than 8</string>
    <string name="success_change_pass">Congratulation, your password has been change</string>
    <string name="success_register">Congratulation, your account has been register</string>
    <string name="success_forgot_pass">Congratulation, your link reset password has been sent to your email, please check it!</string>
    <string-array name="data_name">
        <item>Metamorfosis Sempurna</item>
        <item>Metamorfosis Tidak Sempurna</item>
        <item>Metamorfosis Tanpa Perubahan</item>


    </string-array>
    <string-array name="tenses">
        <item> Metamorfosis sempurna adalah metamorfosis yang dalam perkembangannya menuju dewasa mengalami perubahan bentuk tubuh, penampilan dan perilaku yang berbeda. Perubahan bentuk yang berbeda ini dimulai dari fase telur. Setelah fase telur sudah dilewati, maka fase selanjutnya yakni fase larva. Setelah fase larva akan menghasilkan fase pupa. Fase terakhir dari metamorfosis sempurna adalah fase imago atau dewasa.</item>
        <item> Metamorfosis tidak sempurna adalah metamorfosis yang dalam perkembangannya menuju dewasa mengalami perubahan bentuk tubuh, penampilan dan perilaku yang hampir sama atau tidak jauh berbeda.
            \n Jika pada metamorfosis sempurna terjadi tahapan yang berbeda-beda, lain halnya dengan metamorfosis tidak sempurna yang hanya melewati tahapan yang hampir sama. Tahapan-tahapan itu dimulai dari hewan bertelur, kemudian menjadi nimfa, kemudian nimfa ini akan tumbuh menjadi dewasa (imago). Metamorfosis tidak sempurna dikenal dengan sebutan hemimetabola.</item>
        <item> Mtemorfosis tanpa perubahan adalah siklus hidup yang tidak mengalami perubahan bentuk sejak lahir atau menetas hingga dewasa. Pada siklus ini hewan hanya mengalami peningkatan pada bentuk ukuran tubuh. Berikut ini contoh siklus hidup hewan tanpa mengalami metamorfosis.</item>

    </string-array>
    <string name="contoh"><b>Contoh Hewan dengan Metamorfosis Sempurna</b></string>
    <string name="materi1"><b>a. Fase telur.</b> \nFase telur menjadi fase pertama dari hasil perkembangbiakan pada hewan. Pada fase ini telur-telur-telur yang dihasilkan oleh betina berasal dari hasil fertilisasi yang terjadi pada hewan berkelamin jantan. Sel telur yang bertemu dengan sel sperma akan mengakibatkan terjadinya pembelahan. Pada proses pembelahan ini waktu yang dibutuhkan bervariasi tergantung dari jenis hewannya.</string>
    <string name="materi2"><b>b. Fase larva.</b> \nSetelah melewati fase telur, tahapan selanjutnya yang terjadi di metamorfosis sempurna adalah fase larva. Fase larva ini merupakan fase yang di mana hewan muda sudah mulai aktif untuk mencari makan. Makanan yang didapatkan sangat mudah karena sang induk sudah mempersiapkan jika anakannya berkembang tidak perlu repot-repot untuk mencari makanan</string>
    <string name="materi3"><b>c. Fase pupa.</b> \nFase pupa bisa dikatakan sebagai fase transisi karena terjadinya perubahan wujud dari larva menjadi wujud hewan yang lebih besar. Perubahan wujud yang lebih besar membuat hewan memiliki suatu rangka luar yang bisa melindungi tubuh dan rangka luar itu dinamakan kokon. Meskipun sudah terlindungi oleh kokon, tubuh pupa akan tetap melakukan pembentukan metabolisme dan melakukan pembentukan hewan menuju hewan yang dewasa.</string>
    <string name="materi4"><b>d. Fase imago.</b> \nPada waktu yang sudah ditentukan, maka pupa akan keluar dari cangkangnya. Pupa yang keluar dari cangkangnya akan memiliki wujud hewan yang baru dan menandakan bahwa hewan yang mengalami metamorfosis sempurna sudah tumbuh menjadi dewasa. Pada fase ini, hewan sudah harus membiasakan dirinya menghadapi predator-predator lainnya.</string>
    <string name="contoh1"><b>1. Kupu-Kupu.</b></string>
    <string name="contoh2"><b>2. Nyamuk.</b></string>
    <string name="contoh3"><b>3. Katak.</b></string>
    <string name="contoh4"><b>4. Lalat.</b></string>
    <string name="contoh5"><b>5. Lebah Madu.</b></string>
    <string name="contoh6"><b>6. Semut.</b></string>
    <string name="contoh7"><b>7. Ngengat.</b></string>
    <string name="contoh11">Siapa yang tidak kenal dengan hewan kupu-kupu. Hewan ini sering kita temui pada bunga-bunga yang memiliki nektar. Kupu-kupu sering hinggap di bunga karena nektar bunga menjadi makanan utama dari kupu-kupu.\nKupu-kupu menjadi hewan yang tergolong ke dalam metamorfosis sempurna karena perubahan wujud dari hewan muda menuju ke dewasa sangat berbeda. Untuk lebih jelasnya mari kita simak gambar di bawah ini.\nBerdasarkan gambar di atas, metamorfosis pada kupu-kupu dimulai dari telur yang berasal dari perkawinan kupu-kupu jantan dengan kupu-kupu betina. Kemudian, telur itu berubah menjadi ulat yang biasa kita temukan pada dedaunan. Lalu, ulat berubah menjadi kepompong atau pupa dengan cangkang untuk melindungi tubuh. Setelah beberapa lama, kepompong akan berubah menjadi kupu-kupu muda dan beberapa hari kemudian akan berubah menjadi kupu-kupu dewasa.</string>
    <string name="contoh22">Contoh hewan berikutnya yang mengalami metamorfosis sempurna adalah nyamuk. Hewan ini sering kita temui pada malam hari dan terkadang nyamuk mengganggu tidur seseorang, baik itu karena suaranya atau karena gigitannya.\nMeskipun nyamuk sangat suka terbang, tetapi indukan nyamuk akan menyimpan telurnya di permukaan air yang tenang. Oleh sebab itu, kita harus rajin membersihkan bak mandi supaya tidak ada telur nyamuk.\nBerdasarkan gambar di atas, telur menjadi fase awal terjadinya metamorfosis sempurna pada nyamuk. Setelah telur menetas akan berubah menjadi seekor larva. Larva ini akan beradaptasi untuk mencari makan supaya bisa melanjutkan hidupnya ke fase pupa. Setelah fase larva sudah selesai, selanjutnya adalah fase pupa. Fase terakhir dari metamorfosis pada nyamuk adalah nyamuk menjadi</string>
    <string name="materi11"><b>a. Fase telur.</b> \nFase telur ini merupakan fase yang sama seperti hewan dengan metamorfosis sempurna. Telur yang dihasilkan dari hasil perkawinan antara hewan jantan dan betina akan diletakkan di habitat aslinya. Bukan hanya diletakkan di habitat aslinya, tetapi sang induk akan memastikan apakah telur yang diletakkan sudah aman dari serangan predator atau belum. Jika belum aman dari serangan predator, maka sang induk akan mencari tempat yang baru.</string>
    <string name="materi22"><b>b. Fase nimfa.</b> \nFae kdua dari metamorfosis tidak sempurna adalah fase nimfa. Fase nimfa ini berbeda dengan fase larva yang ada di metamorfosisi sempurna. Fase larva wujud hewan muda akan berbeda dengan wujud hewan yang sudah dewasa. Sementera itu, fase nimfa wujud hewan muda akan sama dengan wujud hewan dewasa hanya saja ukurannya berbeda.</string>
    <string name="materi33"><b>c. Fase imago.</b> \nFase imago menandakan bahwa hewan bermetamorfosis tidak sempurna sudah melewati fase nimfa. Jika dilihat dengan saksama, maka tubuh atau wujud (tampak dari luar) dari fase nimfa ke imago hanya mengalami perubahan ukuran tubuh saja.
        \nFase imago adalah fase dewasa yang terjadi pada hewan dengan metamorfosis sempurna dan tidak sempurna. Pada fase imago, seluruh organ tubuh dan organ reproduksi sudah mengalami kematangan. Organ reproduksi yang sudah mengalami kematangan, maka hewan bisa melakukan perkembangbiakan dan mengulangi siklus metamorfosis tidak sempurna.</string>
    <string name="contohMater"><b>Contoh Hewan Metamorfosis Tidak Sempurna</b></string>
    <string name="contohMater1"><b>1. Belalang</b></string>
    <string name="contohMater2"><b>2. Kecoak</b></string>
    <string name="contohMater11">Hewan belalang ini sering kita temukan di persawahan atau perkebunan, mulai dari belalang dengan ukuran kecil hingga belalang berukuran besar. Terkadang belalang ini dijadikan sebagai santapan oleh beberapa orang karena dianggap rasanya yang gurih.\nBelalang menjadi bagian hewan yang bermetamorfosis tidak sempurna karena perubahan dari nimfa ke belalang dewasa tidak mengalami perubahan wujud yang signifikan. Perbedaan yang terjadi pada belalang muda dengan belalang dewasa hanya sebatas pada ukuran tubuh saja.\nDari gambar di atas, belalang metamorfosis tidak sempurna belalau bermula dari telur yang berasal dari indukan atau belalang betina. Setelah telur menetas, kemudian berubah menjadi nimfa atau belalang muda. Setiap perkembangan belalang muda menuju dewasa tidak ada perubahan wujud yang signifikan kecuali ukuran tubuh belalang.</string>
    <string name="contohMater22">ewan kecoak termasuk ke dalam jenis hewan yang suka hidup di tempat-tempat yang lembab, seperti kamar mandi. Meskipun hewan ini berukuran kecil, tetapi ia bisa terbang. Bahkan, bagi sebagian orang, hewan ini sangat menakutkan terutama pada saat terbang, apakah kamu salah satunya?\nKecoak menjadi hewan yang bermetamorfosis tidak sempurna karena bentuk tubuhnya saat muda hingga dewasa hanya berubah pada ukuran saja. Dengan kata lain, wujud dari kecoak muda hingga dewasa tidak mengalami perubahan.\nDari gambar di atas, metamorfosis tidak sempurna kecoak bermula dari telur. Lalu berubah menjadi nimfa atau kecoak muda. Setelah kecoak muda berkembang, ia akan menjadi kecoak dewasa yang memiliki tubuh yang sama dengan kecoak muda.</string>
</resources>